--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@
 # Included this line based on a recommendation when installing
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
-baseURL = "https://5050forecast/netlify.com"
+baseURL = "/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Hugo tranquilpeak theme"
@@ -35,7 +35,7 @@ canonifyurls = true
 
 [author]
   name = "James Northrop"
-  bio = "Super bio with markdown support **COOL**"
+  bio = "Experienced Demand Manager / Data Scientist, currently employed by Infosys Consulting."
   job = "Data Scientist / Demand Manager"
   location = "Melbourne, Australia"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
@@ -105,7 +105,7 @@ canonifyurls = true
   # You must use date format used by Go Time package https://golang.org/pkg/time/
   # Months (not work with short month like "jan", "feb", etc) are translated if translation exists on i18n folders
   # Default format is: January 2, 2006 
-  # dateFormat = "2 January 2006"
+  dateFormat = "2 January 2006"
 
   # Global keywords configuration. Following keywords will be add to every pages
   # keywords = ["development", "next-gen"]
@@ -147,7 +147,7 @@ canonifyurls = true
   coverImage = "cover.jpg"
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
-  imageGallery = true
+  imageGallery = false
 
   # Display thumbnail image of each post on index pages (false: disabled, true: enabled)
   thumbnailImage = true
