--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 baseURL = "/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
-title = "Hugo tranquilpeak theme"
+title = "Making 50-50 Demand Forecasts"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "pennydropper-blog"
 # googleAnalytics = "UA-123-45"
@@ -121,7 +121,7 @@ canonifyurls = true
   # If false it will flat categories.
   hierarchicalCategories = true
 
-  description = "Hugo tranquilpeak theme demo"
+  description = "Making 5050 Demand Forecasts"
 
   # Customization
   # Define the behavior of the sidebar
@@ -145,6 +145,7 @@ canonifyurls = true
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
   coverImage = "cover.jpg"
+  # coverImage = /img/fcst_snaps.png
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
   imageGallery = false
