Amend disqus_shortname

--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Making 50-50 Demand Forecasts"
 theme = "hugo-tranquilpeak-theme"
-disqusShortname = "5050forecasting"
+disqusShortname = "5050forecasting-netlify-com"
 # googleAnalytics = "UA-123-45"
 paginate = 7
 canonifyurls = true
