--- a/config.toml
+++ b/config.toml
@@ -144,7 +144,8 @@ canonifyurls = true
   # Current image is on AWS S3 and delivered by AWS CloudFront.
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
-  coverImage = "cover.jpg"
+  # coverImage = "cover.jpg"
+  coverImage = "Sagrada JN.jpg"
   # coverImage = /img/fcst_snaps.png
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
@@ -162,7 +163,7 @@ canonifyurls = true
   autoThumbnailImage = true
 
   # Your favicon path, default is "/favicon.png"
-  # favicon = "/favicon.png"
+  favicon = "favicon-32x32.png"
 
   # Header configuration
   # The link at the right of the header is customizable
